--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,7 @@
   <artifactId>jacobi</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>jacobi</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <name>lab1</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -51,6 +49,15 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+        <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <classpathPrefix>lib/</classpathPrefix>
+            <mainClass>com.jacobi.App</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
